# GraphicsFromScratch

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.cache/clangd/index/: application.cpp.1CCF6956CBB3DF2E.idx  logger.cpp.0DFC71CD3E8313BC.idx  logger.hpp.FC24CEB544E61066.idx  prova.cpp.19A29934E5CF66B8.idx  prova.hpp.1F41E77FC1D1B0D2.idx  renderer.cpp.74B9275E5726D8CF.idx  renderer.hpp.FE288AF396913ED8.idx  window.cpp.2D3E79E76B11DB21.idx  window.hpp.9DA42A1EC5059882.idx
glss/: CMakeLists.txt
glss/include/GLSS/: window.hpp
glss/src/: glfw_platform.hpp  glfw_window.cpp  sdl3_platform.hpp  sdl3_window.cpp  win32_platform.hpp  win32_window.cpp  wl_platform.hpp  wl_window.cpp
renderer/: CMakeLists.txt
renderer/src/: renderer.cpp
sandbox/: CMakeLists.txt
sandbox/src/: application.cpp
shared/: CMakeLists.txt
shared/include/csl/: logger.hpp
shared/src/: logger.cpp
src/: defines.h  main.c
src/core/: logger.c  logger.h
src/renderer/: renderer.c  renderer.h
src/window/: glfw_window.c  win32_window.c  window.h
